@@ -1343,7 +1343,7 @@ Please confirm that this is what you intend to do.',
 'lockdbsuccesssub' => 'Database lock succeeded',
 'unlockdbsuccesssub' => 'Database lock removed',
 'lockdbsuccesstext' => 'The database has been locked.
-<br />Remember to remove the lock after your maintenance is complete.',
+<br />Remember to [[Special:Unlockdb|remove the lock]] after your maintenance is complete.',
 'unlockdbsuccesstext' => 'The database has been unlocked.',
 'lockfilenotwritable' => 'The database lock file is not writable. To lock or unlock the database, this needs to be writable by the web server.',
 
